--- a/pom.xml
+++ b/pom.xml
@@ -86,5 +86,10 @@
   		<artifactId>jstl</artifactId>
   		<version>1.2</version>
   	</dependency>
+  	<dependency>
+  		<groupId>org.springframework.security</groupId>
+  		<artifactId>spring-security-taglibs</artifactId>
+  		<version>4.0.4.RELEASE</version>
+  	</dependency>
   </dependencies>
 </project>
